integration_tests/codegen_fail/fail/subscription/argument_wrong_default_array.stderr
error[E0277]: the trait bound `[bool; 2]: From<[bool; 3]>` is not satisfied
  --> fail/subscription/argument_wrong_default_array.rs:10:1
   |
10 | #[graphql_subscription]
   | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<[bool; 3]>` is not implemented for `[bool; 2]`
   |
   = help: the following implementations were found:
             <&'a [ascii::ascii_char::AsciiChar] as From<&'a ascii::ascii_str::AsciiStr>>
             <&'a [u32; 4] as From<&'a ppv_lite86::x86_64::vec128_storage>>
             <&'a [u8] as From<&'a ascii::ascii_str::AsciiStr>>
             <&'a mut [ascii::ascii_char::AsciiChar] as From<&'a mut ascii::ascii_str::AsciiStr>>
           and 11 others
   = note: required because of the requirements on the impl of `Into<[bool; 2]>` for `[bool; 3]`
   = note: this error originates in the attribute macro `graphql_subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
